# SteeringWheel

./: .gitignore  README.md  game.py  main.c
feeder/: CMakeLists.txt
feeder/inc/: feeder.h  ffb.h  vjoyinterface.h
feeder/src/: feeder.cpp  ffb.cpp  main.cpp  serial_reader.cpp
stm32/: .cproject  .mxproject  .project  Dutch Debug.launch  Dutch.ioc  main.c
stm32/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32/Debug/: Dutch.elf  Dutch.list  Dutch.map  makefile  objects.list
stm32/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  system_stm32f4xx.d
stm32/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_hcd.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_i2s.d  stm32f4xx_hal_i2s_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  stm32f4xx_ll_usb.d  subdir.mk
stm32/Debug/Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/: usbh_cdc.d
stm32/Debug/Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.d  usbh_ctlreq.d  usbh_ioreq.d  usbh_pipes.d
stm32/Debug/USB_HOST/App/: usb_host.d
